# ds-small-projects

./: .gitignore  Distribution of Infrastructure Investment .Rmd  Federal Reserve Mandate Analysis.ipynb  README.md  Remote vs RTO,.ipynb  Remote vs RTO.ipynb  Storms Are Getting Angry.ipynb
DATA622-Project/: Copy_of_DATA622_Spring2026_Lab8.ipynb  README.md
DATA622-Project/FinalProjectData622/: .dockerignore  DATA622_Final_Project_Report.docx  Dockerfile  README.md  auth_manager.py  cloud_storage.py  config.py  dashboard.py  data_adapter.py  data_generator.py  data_preprocessing.py  decision_engine.py  generate_report.py  main.py  model_evaluation.py  model_training.py  pharmacy_config.yaml  pyproject.toml  requirements.txt  run_pipeline.py  user_db.py
DATA622-Project/FinalProjectData622/.streamlit/: config.toml
DATA622-Project/FinalProjectData622/data/: pharmacy_sales.csv  sample_format.csv
DATA622-Project/FinalProjectData622/models/: Albuterol_Inhaler_model.pkl  Amoxicillin_500mg_model.pkl  Azithromycin_250mg_model.pkl  Cetirizine_10mg_model.pkl  Lisinopril_10mg_model.pkl  Metformin_500mg_model.pkl  Omeprazole_20mg_model.pkl  Sertraline_50mg_model.pkl
DATA622-Project/FinalProjectData622/outputs/: cross_validation_metrics.csv  evaluation_metrics.csv  reorder_recommendations.csv
Data-608/: Poverty in the US.ipynb
Data-612/: Project-Proposal.ipynb  databricks_project_5.ipynb  discussion-1.ipynb  discussion-2.ipynb  discussion-3.ipynb  discussion-4.ipynb  final-project.ipynb  project-1.ipynb  project-2.ipynb  project-3.ipynb  project-4.ipynb  project-5.ipynb  (+1 more)
(+26 files in other folders)
