[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "holidays==0.40",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "prophet==1.1.5",
    "scikit-learn==1.3.2",
    "seaborn==0.13.0",
    "statsmodels==0.14.1",
    "streamlit==1.29.0",
]
